1595017431 | 44 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_danish.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_swedish.txt,  M content/vrmonitor/translations/vrmonitor_french.txt,  M content/vrmonitor/translations/vrmonitor_polish.txt,  M content/vrmonitor/translations/vrmonitor_swedish.txt,  M content/vrmonitor/translations/vrmonitor_tchinese.txt,  M drivers/indexcontroller/resources/rendermodels/valve_controller_knu_1_0_left/valve_controller_knu_1_0_left.json,  M drivers/indexcontroller/resources/rendermodels/valve_controller_knu_1_0_right/valve_controller_knu_1_0_right.json,  M drivers/lighthouse/resources/webinterface/libraries.js,  M drivers/lighthouse/resources/webinterface/pairing.html,  M drivers/lighthouse/resources/webinterface/pairing.js,  M drivers/lighthouse/resources/webinterface/vrwebui_shared.js,  M resources/rendermodels/vr_controller_vive_1_5/vr_con
https://steamdb.info/patchnotes/5302719/

--- a/content/vrmonitor/translations/vrmonitor_bulgarian.txt
+++ b/content/vrmonitor/translations/vrmonitor_bulgarian.txt
@@ -1083,7 +1083,7 @@
 "[english]MenuAction_DirectMode"	"Direct Display Mode"
 "MenuAction_EnableDirectMode"	"Включване на режима за директно изобразяване"
 "[english]MenuAction_EnableDirectMode"	"Enable Direct Display Mode"
-"MenuAction_DisableDirectMode"	"Изключване на режима за директно изобразяване"
+"MenuAction_DisableDirectMode"	"Преустановяване на режима за директно изобразяване"
 "[english]MenuAction_DisableDirectMode"	"Disable Direct Display Mode"
 "MenuAction_PairController"	"Сдвояване на контролер"
 "[english]MenuAction_PairController"	"Pair Controller"
@@ -1093,7 +1093,7 @@
 "[english]MonitorController_SwitchDirectMode_Header"	"Direct Display Mode"
 "MonitorController_EnableDirectMode_Text"	"SteamVR ще се рестартира, след като включите режима за директно изобразяване. Искате ли да продължите?"
 "[english]MonitorController_EnableDirectMode_Text"	"SteamVR will restart after enabling Direct Display Mode. Do you want to continue?"
-"MonitorController_DisableDirectMode_Text"	"ПРЕДУПРЕЖДЕНИЕ: Изключването на режима за директно изобразяване ще разшири излъчването на ВР шлема към работния плот, което не се препоръчва. Сигурни ли сте, че искате да изключите режима за директно изобразяване? SteamVR ще се рестартира, след като тази промяна бъде направена."
+"MonitorController_DisableDirectMode_Text"	"ПРЕДУПРЕЖДЕНИЕ: Преустановяването на режима за директно изобразяване ще разшири излъчването на ВР шлема към работния плот, което не се препоръчва. Сигурни ли сте, че искате да изключите режима за директно изобразяване? SteamVR ще се рестартира, след като тази промяна бъде направена."
 "[english]MonitorController_DisableDirectMode_Text"	"WARNING: Disabling Direct Display Mode will extend the headset onto the desktop, and is not recommended. Are you sure you want to disable Direct Display Mode? SteamVR will restart after this change is made."
 "FirmwareWizard_WatchmanUpdate"	"Обновяване на проследяващо у-во"
 "[english]FirmwareWizard_WatchmanUpdate"	"Tracking Device Update"
@@ -1388,7 +1388,7 @@
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
 "DismissableWarning_UnknownHardwareDetected"	"Засечен е неизвестен хардуер (0x2000)"
 "[english]DismissableWarning_UnknownHardwareDetected"	"Unknown Hardware Detected (0x2000)"
-"DismissableWarning_WindowsAeroDisabled"	"Windows Aero е изключено (0x4000)"
+"DismissableWarning_WindowsAeroDisabled"	"Windows Aero е преустановено (0x4000)"
 "[english]DismissableWarning_WindowsAeroDisabled"	"Windows Aero disabled (0x4000)"
 "Settings_UseBluetoothLink_Text"	"Включване на Bluetooth"
 "[english]Settings_UseBluetoothLink_Text"	"Enable Bluetooth"
@@ -1408,9 +1408,9 @@
 "[english]DismissableWarning_TimeFormat"	"h:mm:ss AP"
 "Settings_Camera_Compatibility"	"<b>Честота на камерата</b>"
 "[english]Settings_Camera_Compatibility"	"<b>Camera Rate</b>"
-"Settings_Camera_CompatibilityExplanation"	"<font color=#ffffff><b>Ако изпитвате загуби при проследяването, ще е добре да зададете по-ниска честота на камерата, да я изключите или опитайте различен USB порт.</b></font>"
+"Settings_Camera_CompatibilityExplanation"	"<font color=#ffffff><b>Ако изпитвате загуби при проследяването, ще е добре да зададете по-ниска честота на камерата, да я преустановите или опитайте различен USB порт.</b></font>"
 "[english]Settings_Camera_CompatibilityExplanation"	"<font color=#ffffff><b>If you experience a loss of tracking you may want to set a lower Camera Rate, disable the camera, or try a different USB port.</b></font>"
-"Settings_Camera_EnableWarning"	"<font color=#ffffff><b>Включването на камерата може да повлияе върху стабилността, свързана с проследяването при несъвместими USB портове.<br><br>Ако изпитвате загуби при проследяването, ще е добре да зададете по-ниска честота на камерата, да я изключите или опитайте различен USB порт.</b></font>"
+"Settings_Camera_EnableWarning"	"<font color=#ffffff><b>Включването на камерата може да повлияе върху стабилността, свързана с проследяването при несъвместими USB портове.<br><br>Ако изпитвате загуби при проследяването, ще е добре да зададете по-ниска честота на камерата, да я преустановите или опитайте различен USB порт.</b></font>"
 "[english]Settings_Camera_EnableWarning"	"<font color=#ffffff><b>Enabling the camera may interfere with tracking stability on incompatible USB ports.<br><br>If you experience a loss of tracking you may want to set a lower Camera Rate, disable the camera, or try a different USB port.</b></font>"
 "Settings_Camera_TrackingRequiredForTest"	"Изглежда, че шлемът за виртуална реалност не проследява активно.\n\nИзпробването на камерата изисква правилно проследяващ ВР шлем, преди да бъде стартирано видео излъчването.\n\nПоставете шлема за виртуална реалност, така че да е ясно видим от базовите станции и опитайте отново."
 "[english]Settings_Camera_TrackingRequiredForTest"	"The headset does not appear to be actively tracking.\n\nThe camera test requires a properly tracking headset before the video stream is started.\n\nPlace the headset in clear view of your base stations and try again."
@@ -1502,11 +1502,11 @@
 "[english]Settings_DisableEnhancedPowerManagement_FailToStart"	"The helper application was not able to start.\nMake sure that you can run this application as admin.\n"
 "Settings_DisableEnhancedPowerManagement_Crash"	"Помощното приложение се срина.\nМоля, опитайте отново.\n"
 "[english]Settings_DisableEnhancedPowerManagement_Crash"	"The helper application crashed.\nPlease try again.\n"
-"Settings_DisableEnhancedPowerManagement_Success"	"Подобреното управление на захранването (Enhanced Power Management) в Windows е изключено за инсталираните SteamVR USB устройства.\n\nЩе е нужно отново да включите USB устройствата, така че промените да влязат в сила.\n"
+"Settings_DisableEnhancedPowerManagement_Success"	"Подобреното управление на захранването (Enhanced Power Management) в Windows е преустановено за инсталираните SteamVR USB устройства.\n\nЩе е нужно отново да включите USB устройствата, така че промените да влязат в сила.\n"
 "[english]Settings_DisableEnhancedPowerManagement_Success"	"Windows Enhanced Power Management has been disabled for installed SteamVR USB devices.\n\nYou must replug the USB devices for changes to take effect.\n"
-"MenuAction_DisableEnhancedPowerManagement"	"Изключване на управлението за захранването"
+"MenuAction_DisableEnhancedPowerManagement"	"Преустановяване на управлението за захранването"
 "[english]MenuAction_DisableEnhancedPowerManagement"	"Disable Power Management"
-"Explanation_DisableEnhancedPowerManagement"	"Изключете управлението на захранването (Enhanced Power Management) в Windows за SteamVR USB устройствата, ако изпитвате неясни загуби при проследяването или невъзможност за сдвояване на контролерите. "
+"Explanation_DisableEnhancedPowerManagement"	"Преустановете управлението на захранването (Enhanced Power Management) в Windows за SteamVR USB устройствата, ако изпитвате неясни загуби при проследяването или невъзможност за сдвояване на контролерите. "
 "[english]Explanation_DisableEnhancedPowerManagement"	"Disable Windows Enhanced Power Management for SteamVR USB Devices if you experience mysterious loss of tracking or inability to pair wireless controllers. "
 "WorkshopUpload_SelectContentType_Environment"	"Пространствен модел"
 "[english]WorkshopUpload_SelectContentType_Environment"	"Environment Model"
@@ -2190,13 +2190,13 @@
 "[english]Settings_PerApplication_MotionSmoothing_Header"	"Motion Smoothing"
 "Settings_PerApplication_MotionSmoothing_On"	"Включено"
 "[english]Settings_PerApplication_MotionSmoothing_On"	"Enabled"
-"Settings_PerApplication_MotionSmoothing_Off"	"Изключено"
+"Settings_PerApplication_MotionSmoothing_Off"	"Преустановено"
 "[english]Settings_PerApplication_MotionSmoothing_Off"	"Disabled"
 "Settings_PerApplication_MotionSmoothing_Checkbox_Default"	"Използване на глобалната настройка (понастоящем %1)"
 "[english]Settings_PerApplication_MotionSmoothing_Checkbox_Default"	"Use global setting (Currently %1)"
 "Settings_PerApplication_MotionSmoothing_Checkbox_ForceOn"	"Винаги включено"
 "[english]Settings_PerApplication_MotionSmoothing_Checkbox_ForceOn"	"Always enable"
-"Settings_PerApplication_MotionSmoothing_Checkbox_ForceOff"	"Винаги изключено"
+"Settings_PerApplication_MotionSmoothing_Checkbox_ForceOff"	"Винаги да се преустановява"
 "[english]Settings_PerApplication_MotionSmoothing_Checkbox_ForceOff"	"Always disable"
 "Advanced_MotionEstimationDisabled"	"Заглаждане на движението — Недостъпно"
 "[english]Advanced_MotionEstimationDisabled"	"Motion Smoothing Unavailable"
@@ -2208,7 +2208,7 @@
 "[english]MonitorController_SwitchSafeMode_Header"	"Safe Mode"
 "MonitorController_EnableSafeMode_Text"	"<span>Безопасният режим</span> може да се използва за ограничаване на SteamVR процесите до най-необходимите, когато настъпят проблеми със съвместимостта.<p>Сигурни ли сте, че искате да включите безопасния режим? SteamVR ще се рестартира след направата на тази промяна.<p><a title=\"Отстраняване на неизправности в SteamVR\" style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Научете още</a>."
 "[english]MonitorController_EnableSafeMode_Text"	"<span>Safe Mode</span> can be used to limit SteamVR processes to the essentials when compatibility issues occur.<p>Are you sure you want to enable Safe Mode? SteamVR will restart after this change is made.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
-"MonitorController_DisableSafeMode_Text"	"Понастоящем <span>SteamVR</span> оперира в безопасен режим.<p>Сигурни ли сте, че искате да изключите безопасния режим? Това ще включи всички драйвери за устройствата и е възможно да доведе до проблеми със съвместимостта. Това също ще рестартира SteamVR.<p><a title=\"Отстраняване на неизправности в SteamVR\" style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Научете още</a>."
+"MonitorController_DisableSafeMode_Text"	"Понастоящем <span>SteamVR</span> оперира в безопасен режим.<p>Сигурни ли сте, че искате да преустановите безопасния режим? Това ще включи всички драйвери за устройствата и е възможно да доведе до проблеми със съвместимостта. Това също ще рестартира SteamVR.<p><a title=\"Отстраняване на неизправности в SteamVR\" style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Научете още</a>."
 "[english]MonitorController_DisableSafeMode_Text"	"<span>SteamVR</span> is currently operating in Safe Mode.<p>Are you sure you want to disable Safe Mode? This will enable all device drivers and may result in compatability issues. This will also restart SteamVR.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
 "Settings_PerApplication_MotionSmoothing_Checkbox_AlwaysOn"	"Винаги принудително вкл. (ПРЕДУПРЕЖДЕНИЕ: Приложението ще работи при преполовени кадри в секунда)"
 "[english]Settings_PerApplication_MotionSmoothing_Checkbox_AlwaysOn"	"Force always-on (WARNING: Application will run at half framerate)"
